--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "format": "bunx prettier -w ."
   },
   "dependencies": {
+    "@mysten/sui.js": "^0.42.0",
+    "@mysten/wallet-kit": "^0.7.3",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
