--- a/package.json
+++ b/package.json
@@ -12,15 +12,21 @@
   "dependencies": {
     "@mysten/sui.js": "^0.42.0",
     "@mysten/wallet-kit": "^0.7.3",
+    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "bignumber.js": "^9.1.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "lodash": "^4.17.21",
+    "lucide-react": "^0.277.0",
     "next": "^13.4.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^1.14.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.198",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "autoprefixer": "^10.4.15",
