--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "incremental": true,
     "esModuleInterop": true,
     "module": "esnext",
+    "target": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
