--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.4",
+    "@radix-ui/react-tooltip": "^1.0.6",
     "bignumber.js": "^9.1.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "framer-motion": "^10.16.4",
     "lodash": "^4.17.21",
     "lucide-react": "^0.277.0",
     "next": "^13.4.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "swiper": "^10.2.0",
     "tailwind-merge": "^1.14.0"
   },
   "devDependencies": {
